Changed paths too CSS/JS files

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="stvvideo/css/main.css">
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 	
@@ -17,9 +17,9 @@
 
 		<!-- Scripts -->
 
-		<script src="stvvideo/bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		
-		<script src="stvvideo/js/main.js"></script>
+		<script src="js/main.js"></script>
 
 	</body>
 </html>
